MDEV-14977 10.2.12 libmariadb doesn't support old protocol

fix the typo in the plugin name